tests/jballerina-unit-test/src/test/resources/test-src/error/error_destructure_binding_pattern_error_cause.bal
public function main() {
    string errorMsg;
    string errorCause;
    error(errorMsg, error(errorCause)) = error("msg", error("Error cause"));
}
